# common-utils

./: .gitignore  DiskUsageReport.html  Makefile  archive-repos.py  archive_repos.txt  cdrive-usage.ps1  install_ansible_ubuntu.sh  install_az_cli_ubuntu.sh  install_docker_ubuntu.sh  install_helm_on_ubuntu_22.04.sh  install_jenkins_on_ubuntu_22.04.sh  install_kubectl_ubuntu.sh  install_minikube_ubuntu.sh  install_terraform_ubuntu.sh  policy_application.sh  py.py  pyproject.toml  results.txt  shell.sh  tags.py  validate_user.py
.github/workflows/: fork-a-repo.yaml  inputs_from_github.yml  kv-sync-workflow-dispatch.yaml  kv-sync.yaml  python-test.yml  python-variable-test.yml  terraform-auth-action-test.yaml  terraforminator.yaml  using_linux_commands.yml  validate_user.yaml  workflow.yml
mongo/: mongocsv.csv
storage/: backend.tf  main.tf  vars.tf
